@@ -117,7 +117,7 @@ struct PQXX_LIBEXPORT nonnoticer : noticer
  *
  * @since libpq 8.2
  */
-PGSTD::string encrypt_password(const PGSTD::string &user,		//[]
+PGSTD::string encrypt_password(const PGSTD::string &user,		//[t0]
 	const PGSTD::string &password);
 
 /// connection_base abstract base class; represents a connection to a database.
