@@ -1,3 +1,6 @@
+2007-01-07  Jeroen T. Vermeulen <jtv@xs4all.nl>
+ include/pqxx/connection_base.hxx, test/test000.cxx:
+  - Test password encryption
 2007-01-05  Jeroen T. Vermeulen <jtv@xs4all.nl>
  test/test085.cxx:
   - Skip if backend version does not support prepared statements
